fix background color on mobile navbar

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -50,9 +50,24 @@ body:after {
   width: 100%;
 }
 
-nav.sticky.is-sticky {
-  background-color: rgba(255, 255, 255, 0.75) !important;
-}
+/* @media (min-width: 992px) { */
+  nav.sticky.is-sticky {
+    background-color: rgba(255, 255, 255, 0.75) !important;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  }
+/* } */
+/* @media (max-width: 991px) {
+  nav.sticky.is-sticky {
+    background-color: transparent;
+  }
+  div.navbar-collapse.collapse.show {
+    background-color: rgba(255, 255, 255, 0.75) !important;
+  }
+  div.navbar-collapse.collapsing {
+    background-color: rgba(255, 255, 255, 0.75) !important;
+  }
+} */
+
 
 /* Caligraphy vectors */
 #caligraphy-desktop {
